Updated Verdaccio Dockerfile to be able to make use of Verdaccio 4. verdaccio-bitbucket plugin now comes from Okode fork.

--- a/verdaccio-bitbucket/Dockerfile
+++ b/verdaccio-bitbucket/Dockerfile
@@ -1,5 +1,8 @@
 FROM verdaccio/verdaccio
 
-RUN npm i && npm i verdaccio-bitbucket
+USER root
+RUN apk --no-cache add --virtual builds-deps build-base git python
+RUN npm i && npm rebuild bcrypt --build-from-source && npm i okode/verdaccio-bitbucket
+USER verdaccio
 
 COPY conf /verdaccio/conf
