Updated config to use new Bitbucket API. Using yarn instead of npm to make use of Verdaccio's image yarn.lock

--- a/verdaccio-bitbucket/Dockerfile
+++ b/verdaccio-bitbucket/Dockerfile
@@ -2,7 +2,7 @@ FROM verdaccio/verdaccio
 
 USER root
 RUN apk --no-cache add --virtual builds-deps build-base git python
-RUN npm i && npm rebuild bcrypt --build-from-source && npm i okode/verdaccio-bitbucket
+RUN yarn && npm rebuild bcrypt --build-from-source && yarn add okode/verdaccio-bitbucket
 USER verdaccio
 
 COPY conf /verdaccio/conf
