--- a/verdaccio-bitbucket/conf/config.yaml
+++ b/verdaccio-bitbucket/conf/config.yaml
@@ -34,7 +34,7 @@ packages:
 
   '@mapfre/*':
     access: fwmovilidad
-    publish: fwmovilidad(admin)
+    publish: fwmovilidad(owner)
     proxy: npmjs
 
   '@*/*':
