--- a/verdaccio-bitbucket/conf/config.yaml
+++ b/verdaccio-bitbucket/conf/config.yaml
@@ -32,9 +32,30 @@ uplinks:
 
 packages:
 
-  '**':
-    access: $authenticated
+  '@mapfre/*':
+    access: fwmovilidad
     publish: fwmovilidad(owner)
+    proxy: npmjs
+
+  '@*/*':
+    # scoped packages
+    access: $all
+    publish: $authenticated
+    proxy: npmjs
+
+  '**':
+    # allow all users (including non-authenticated users) to read and
+    # publish all packages
+    #
+    # you can specify usernames/groupnames (depending on your auth plugin)
+    # and three keywords: "$all", "$anonymous", "$authenticated"
+    access: $all
+
+    # allow all known users to publish packages
+    # (anyone can register by default, remember?)
+    publish: $authenticated
+
+    # if package is not available locally, proxy requests to 'npmjs' registry
     proxy: npmjs
 
 
@@ -50,7 +71,7 @@ middlewares:
     enabled: true
 
 # log settings
-log:
+logs:
   - {type: stdout, format: pretty, level: http}
   #- {type: file, path: verdaccio.log, level: info}
 
