--- a/verdaccio-bitbucket/conf/config.yaml
+++ b/verdaccio-bitbucket/conf/config.yaml
@@ -70,6 +70,8 @@ middlewares:
   audit:
     enabled: true
 
+max_body_size: 100mb
+
 # log settings
 logs:
   - {type: stdout, format: pretty, level: http}
