Modified config.yaml for verdaccio image to generate non-expiring token

--- a/verdaccio-bitbucket/verdaccio/conf/config.yaml
+++ b/verdaccio-bitbucket/verdaccio/conf/config.yaml
@@ -10,10 +10,10 @@ security:
   api:
     jwt:
       sign:
-        expiresIn: 1d
+        expiresIn: 0
   web:
     sign:
-      expiresIn: 1d
+      expiresIn: 0
 
 uplinks:
   npmjs:
